<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.samancore</groupId>
        <artifactId>workflow</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>
    <groupId>io.samancore.workflow</groupId>
    <artifactId>workflow-application</artifactId>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <common.version>1.0.0-SNAPSHOT</common.version>
        <common-error.version>1.0.0-SNAPSHOT</common-error.version>
        <jgrapht-core.version>1.5.2</jgrapht-core.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.samancore.workflow</groupId>
            <artifactId>workflow-model</artifactId>
            <version>1.0.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.samancore</groupId>
            <artifactId>common</artifactId>
            <version>${common.version}</version>
        </dependency>
        <dependency>
            <groupId>io.samancore</groupId>
            <artifactId>common-error</artifactId>
            <version>${common-error.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jgrapht</groupId>
            <artifactId>jgrapht-core</artifactId>
            <version>${jgrapht-core.version}</version>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-oidc</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest-jackson</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-hibernate-orm-panache</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-hibernate-validator</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-jdbc-postgresql</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-hibernate-orm</artifactId>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
